--- a/paper/DePaepeBart2022RM.tex
+++ b/paper/DePaepeBart2022RM.tex
@@ -103,8 +103,8 @@
     % \textcite{BIBTEXKEY} -> Auteur (jaartal)
     We halen 2 aspecten aan om de onderzoeksvraag te motiveren.
     
-    Ten eerste groeit het aandeel van energie uit fotovoltaïsche cellen jaarlijks \autocite{Shurtleff_2018}. Zonneënergie vormt daarom een belangrijke bijdrage aan de energiemix. De dalende prijzen van de fotovoltaïsche installaties, de zoektocht naar groene energie, het maatschappelijk draagvlak en de overheidspremies zijn allemaal elementen die de overstap naar zonneënergie versnellen \autocite{Kouro_2016}.
-    Ten tweede is er de behoefte om al die zonnepaneleninstallaties met elkaar te verbinden. Dit zal ons in staat stellen om de energiebehoefte beter in kaart te brengen met als doel het ontwikkelen van een smart grid. Het smart grid (Tamilmaran and Dwarkadas, 2011) is een eigen afdeling binnen het IoT met als doelstelling:
+    Ten eerste groeit het aandeel van energie uit fotovoltaïsche cellen jaarlijks \autocite{Shurtleff2014}. Zonneënergie vormt daarom een belangrijke bijdrage aan de energiemix. De dalende prijzen van de fotovoltaïsche installaties, de zoektocht naar groene energie, het maatschappelijk draagvlak en de overheidspremies zijn allemaal elementen die de overstap naar zonneënergie versnellen \autocite{Kouro2015}.
+    Ten tweede is er de behoefte om al die zonnepaneleninstallaties met elkaar te verbinden. Dit zal ons in staat stellen om de energiebehoefte beter in kaart te brengen met als doel het ontwikkelen van een smart grid. \textcite{Vijayapriya2011} definieert het smart grid als een eigen afdeling binnen het IoT met als doelstelling:
     \begin{itemize}
         \item een zelflerend systeem door en voor de gebruikers
         \item een gepersonaliseerd stroomaanbod
@@ -114,32 +114,36 @@
 
     We gaan dieper in op de energietransitie.
     
+    Het \textcite{IPCC2022} rapport stelt dat om de globale klimaatopwarming te beperken, er grote wijzigingen in de energiesector zullen moeten plaatsvinden. In de eerste plaats moet het gebruik van fossiele brandstof omlaag, ook moeten zoveel mogelijk eindverbruikers toegang krijgen tot elektriciteit. De efficiëntie van de energievraag moet geöptimaliseerd worden en er moet overgeschakeld worden op alternatieve brandstoffen (zoals waterstof).
+    
+    Om aan deze stijgende elektriciteitsvraag te voldoen, wordt het smart grid een essentiële technologie \autocite{Patel2022}. Het is een verbeterde versie van het traditionele grid dat communicatie van stroom en data in de 2 richtingen toelaat. De grote uitdaging ligt in het vinden van het evenwicht tussen productie en consumptie en vormt vandaag een belangrijk onderzoekonderwerp \autocite{KouveliotisLysikatos2022}.
+    
     We gaan dieper in op het IoT.
     
-    IoT wordt voor het eerst benoemd door \textcite{Ashton_2009}. IoT verwijst naar slimme objecten, toestellen en sensoren die uniek adresseerbaar zijn op basis van hun communicatieprotocollen. Ze zijn autonoom en aanpasbaar met voldoende ingebouwde veiligheid \autocite{Shafique_2020}. De impact die IoT technologie kan hebben, blijft echter niet beperkt tot de waarde van één enkel object. De functionaliteit van één product kan verder uitgebreid worden wanneer het gekoppeld wordt aan gerelateerde producten \autocite{Wortmann_2015}. Het ultieme doel van IoT technologie is om ons het leven aangenamer te maken, omgeven door slimme objecten die weten wat we nodig hebben \autocite{Kassab_2020}. Eén van de voornaamste gevolgen van IoT is het automatisch aanmaken van ongeziene hoeveelheden data \autocite{Gubbi_2013} \autocite{Kassab_2020}. Algemene toegang tot deze gegevens, van alle objecten onderling verbonden via het internet ontplooit het IoT helemaal in de domeinen die diensten en producten leveren \autocite{Gubbi_2013}. \textcite{Kassab_2020} geeft een compleet overzicht van alle domeinen met recente IoT toepassingen. Tussen smart cities, medische toepassingen, en vele andere, selecteren wij smart grid en smart home als toepassingsgebieden voor ons onderzoek.
+    IoT wordt voor het eerst benoemd door \textcite{Ashton2009}. IoT verwijst naar slimme objecten, toestellen en sensoren die uniek adresseerbaar zijn op basis van hun communicatieprotocollen. Ze zijn autonoom en aanpasbaar met voldoende ingebouwde veiligheid \autocite{Shafique2020}. De impact die IoT technologie kan hebben, blijft echter niet beperkt tot de waarde van één enkel object. De functionaliteit van één product kan verder uitgebreid worden wanneer het gekoppeld wordt aan gerelateerde producten \autocite{Wortmann2015}. Het ultieme doel van IoT technologie is om ons het leven aangenamer te maken, omgeven door slimme objecten die weten wat we nodig hebben \autocite{Kassab2020}. Eén van de voornaamste gevolgen van IoT is het automatisch aanmaken van ongeziene hoeveelheden data \autocite{Gubbi2013} \autocite{Kassab2020}. Algemene toegang tot deze gegevens, van alle objecten onderling verbonden via het internet ontplooit het IoT helemaal in de domeinen die diensten en producten leveren \autocite{Gubbi2013}. \textcite{Kassab2020} geeft een compleet overzicht van alle domeinen met recente IoT toepassingen. Tussen smart cities, medische toepassingen, en vele andere, selecteren wij smart grid en smart home als toepassingsgebieden voor ons onderzoek.
     
-    Het smart grid bestaat uit een elektrisch netwerk dat op een intelligente manier de activiteiten van vele gebruikers verbindt. Producenten en verbruikers die verbonden zijn via het smart grid zullen uiteindelijk zorgen voor een rendabele, duurzame en betrouwbare energiebron \autocite{Kassab_2020} .
+    Het smart grid bestaat uit een elektrisch netwerk dat op een intelligente manier de activiteiten van vele gebruikers verbindt. Producenten en verbruikers die verbonden zijn via het smart grid zullen uiteindelijk zorgen voor een rendabele, duurzame en betrouwbare energiebron \autocite{Kassab2020} .
     
-    Het smart home transformeert een woning in een geäutomatiseerd gebouw vol met geïnstalleerde en gecontroleerde slimme objecten. De algemene architectuur van een smart home laat die objecten communiceren met een centraal beheersysteem dat kan bediend worden via een app op de smartphone \autocite{Kassab_2020}. Een smart home biedt functies voor het welzijn, de veiligheid, het vermaak en het comfort van de bewoners \autocite{Choi_2021}.
+    Het smart home transformeert een woning in een geäutomatiseerd gebouw vol met geïnstalleerde en gecontroleerde slimme objecten. De algemene architectuur van een smart home laat die objecten communiceren met een centraal beheersysteem dat kan bediend worden via een app op de smartphone \autocite{Kassab2020}. Een smart home biedt functies voor het welzijn, de veiligheid, het vermaak en het comfort van de bewoners \autocite{Choi2021}.
 
     We zoeken de verschillende componenten op die deel zullen uitmaken van ons te bouwen systeem en onderzoeken de eigenschappen en concepten om ze in de praktijk te gebruiken.
     
-    Fotovoltaïsche installaties bestaan onder andere uit een omvormer, een hoogtechnologisch toestel dat gelijkstroom (afkomstig van de zonnepanelen) omzet naar wisselstroom (dat gebruikt wordt op het stroomnet) \autocite{Teodorescu_2011}. Een omvormer genereert ook data over de opbrengst en communiceert die over het internet naar remote servers van de fabrikant \autocite{Huawei Fusion Solar}. De omvormer is dus ons object, ons toestel dat verbonden is met het IoT.
+    Fotovoltaïsche installaties bestaan onder andere uit een omvormer, een hoogtechnologisch toestel dat gelijkstroom (afkomstig van de zonnepanelen) omzet naar wisselstroom (dat gebruikt wordt op het stroomnet) \autocite{Teodorescu2011}. Een omvormer genereert ook data over de opbrengst en communiceert die over het internet naar remote servers van de fabrikant \autocite{Fusionsolar2021}. De omvormer is dus ons object, ons toestel dat verbonden is met het IoT.
     
-    Om die verbinding tot stand te brengen is er een centraal systeem nodig. Het centrale beheersysteem draait software die moet toelaten om heel uiteenlopende slimme objecten te verbinden en weer te geven op de smartphone \autocite{Setz_2021}. Er bestaan zowel commerciële als open-source oplossingen. Vandaag zien we meer en meer dat de smart home componenten gebruik maken van het internet voor hun communicatie en van standaarden voor een betere interoperabiliteit. Een goed systeem steunt op volgende principes: \begin{itemize}
+    Om die verbinding tot stand te brengen is er een centraal systeem nodig. Het centrale beheersysteem draait software die moet toelaten om heel uiteenlopende slimme objecten te verbinden en weer te geven op de smartphone \autocite{Setz2021}. Er bestaan zowel commerciële als open-source oplossingen. Vandaag zien we meer en meer dat de smart home componenten gebruik maken van het internet voor hun communicatie en van standaarden voor een betere interoperabiliteit. Een goed systeem steunt op volgende principes: \begin{itemize}
         \item open API's
         \item interoperabele protocollen
         \item integreer ook de meest eenvoudige toestellen
         \item beheer heterogene systemen centraal
     \end{itemize}
 
-    Open Home Automation Bus (open-HAB) is één van de open-source beheersystemen. Het is fabrikant onafhankelijk en werkt met vele protocollen en toestellen waardoor het een centrale plaats inneemt in de smart home \autocite{Domb_2019}. \textcite{Sowah_2020} bouwt een hele architectuur met centraal open-HAB voor de smart home. We zien dat open-HAB op een Raspberry Pi microcontroller geïnstalleerd wordt en fungeert als centrale server voor het systeem.
+    Open Home Automation Bus (open-HAB) is één van de open-source beheersystemen. Het is fabrikant onafhankelijk en werkt met vele protocollen en toestellen waardoor het een centrale plaats inneemt in de smart home \autocite{Domb2019}. \textcite{Sowah2020} bouwt een hele architectuur met centraal open-HAB voor de smart home. We zien dat open-HAB op een Raspberry Pi microcontroller geïnstalleerd wordt en fungeert als centrale server voor het systeem.
     
-    Met de opkomst van het IoT is er nood aan goedkope en flexibele hardware. Raspberry Pi vervult deze eisen doordat het uitbreidbaar is en telkens weer kan omgebouwd worden tot een andere component die enkele specifieke taken vervult \autocite{Maksimovic_2015}. \textcite{Jain_2021} ontleedt de Raspberry Pi volledig alvorens hem uit te breiden met diverse componenten om er een volwaardig en goedkoop home automation systeem van te maken.
+    Met de opkomst van het IoT is er nood aan goedkope en flexibele hardware. Raspberry Pi vervult deze eisen doordat het uitbreidbaar is en telkens weer kan omgebouwd worden tot een andere component die enkele specifieke taken vervult \autocite{Maksimovic2014}. \textcite{Jain2021} ontleedt de Raspberry Pi volledig alvorens hem uit te breiden met diverse componenten om er een volwaardig en goedkoop home automation systeem van te maken.
     
     Tot hier toe hebben we de relevantie van het automatiseren en integreren van de data afkomstig van fotovoltaïsche installaties voor het smart grid en het smart home besproken. De verschillende onderdelen van een intelligent systeem zoals een beheersysteem en een microcontroller werden opgezocht. In wat volgt kiezen we enkele specifieke onderdelen om een POC te definiëren.
     
-    Er bestaan veel omvormers van verschillende fabrikanten op de markt. Voor de POC selecteren we de Huawei omvormer SUN2000 \autocite{huawei handleiding}. We zijn gebaat met een flexibel beheersysteem dat steunt op een goed uitgebouwde community. Op basis van die criteria selecteren wij open-HAB. Tenslotte valt de keuze voor een microcontroller op de Raspberry Pi. Dit wordt gemotiveerd door de hoge populariteit van dit toestel en het grote aanbod op de markt.
+    Er bestaan veel omvormers van verschillende fabrikanten op de markt. Voor de POC selecteren we de Huawei omvormer SUN2000 \autocite{SUN2000L2022}. We zijn gebaat met een flexibel beheersysteem dat steunt op een goed uitgebouwde community. Op basis van die criteria selecteren wij open-HAB. Tenslotte valt de keuze voor een microcontroller op de Raspberry Pi. Dit wordt gemotiveerd door de hoge populariteit van dit toestel en het grote aanbod op de markt.
     
     Het doel van dit onderzoek is om een geautomatiseerd systeem te ontwikkelen dat de opbrengstgegevens van een fotovoltaïsche installatie uitleest en opslaat. Deze gegevens kunnen op elk moment via een app op de smartphone bekeken worden. Voor de POC gebruiken we een Huawei omvormer SUN2000, Rasperry Pi microcontroller, en open-HAB beheersysteem.
     
