--- a/paper/bibliografie.bib
+++ b/paper/bibliografie.bib
@@ -1,31 +1,3 @@
-@BOOK{Moore2002,
-  title = {Introduction to the Practice of Statistics},
-  publisher = {W. H. Freeman},
-  year = {2002},
-  author = {Moore, David and McCabe, George},
-  owner = {jbuy519},
-  timestamp = {2014.01.28}
-}
-
-@BOOK{Smits2011,
-  title = {Onderzoek met SPSS en Excel},
-  publisher = {Pearson Education},
-  year = {2011},
-  author = {Smits, Johan and Edens, Ronald},
-  owner = {jbuy519},
-  timestamp = {2014.01.23}
-}
-
-@Article{Hacke2018,
-  author       = {Peter Hacke and Sumanth Lokanath and Paul Williams and Arvind Vasan and Paul Sochor and GovindaSamy TamizhMani and Hirofumi Shinohara and Sarah Kurtz},
-  date         = {2018-02},
-  journaltitle = {Renewable and Sustainable Energy Reviews},
-  title        = {A status review of photovoltaic power conversion equipment reliability, safety, and quality assurance protocols},
-  doi          = {10.1016/j.rser.2017.07.043},
-  pages        = {1097--1112},
-  volume       = {82},
-}
-
 @Book{Teodorescu2011,
   author       = {Teodorescu, Remus and Liserre, Marco and Rodriguez, Pedro},
   date         = {2011-02},
@@ -35,48 +7,6 @@
   pages        = {1097--1112},
   publisher    = {John Wiley & Sons},
   url          = {https://www.ebook.de/de/product/6597146/remus_teodorescu_marco_liserre_pedro_rodriguez_grid_converters_for_photovoltaic_and_wind_power_systems.html},
-  volume       = {82},
-  journaltitle = {Renewable and Sustainable Energy Reviews},
-}
-
-@Book{Teodorescu2014,
-  author       = {Teodorescu, Remus and Liserre, Marco and Rodriguez, Pedro},
-  date         = {2014-02},
-  title        = {Internet of Things},
-  doi          = {10.1007/978-3-319-04223-7},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  isbn         = {0470057513},
-  pages        = {1097--1112},
-  publisher    = {Springer International Publishing},
-  url          = {https://www.ebook.de/de/product/6597146/remus_teodorescu_marco_liserre_pedro_rodriguez_grid_converters_for_photovoltaic_and_wind_power_systems.html},
-  volume       = {82},
-  journaltitle = {Renewable and Sustainable Energy Reviews},
-}
-
-@Book{Hulsebos2019,
-  author       = {Hulsebos, Rob},
-  date         = {2019-02},
-  title        = {Modbus : the manual},
-  doi          = {10.1007/978-3-319-04223-7},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  isbn         = {0470057513},
-  pages        = {1097--1112},
-  publisher    = {S.l. : s.n., 2019},
-  url          = {https://www.ebook.de/de/product/6597146/remus_teodorescu_marco_liserre_pedro_rodriguez_grid_converters_for_photovoltaic_and_wind_power_systems.html},
-  volume       = {82},
-  journaltitle = {Renewable and Sustainable Energy Reviews},
-}
-
-@Book{Hanes2017,
-  author       = {Hanes, David and Salgueiro, Gonzalo and Grossetete, Patrick},
-  date         = {2017-06},
-  title        = {IoT Fundamentals: Networking Technologies, Protocols, and Use Cases for the Internet of Things},
-  doi          = {10.1007/978-3-319-04223-7},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  isbn         = {1587144565},
-  pages        = {1097--1112},
-  publisher    = {CISCO},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {82},
   journaltitle = {Renewable and Sustainable Energy Reviews},
 }
@@ -110,21 +40,6 @@
   publisher    = {CISCO},
 }
 
-@Article{Lee2015,
-  author       = {In Lee and Kyoochun Lee},
-  date         = {2015-07},
-  journaltitle = {Business Horizons},
-  title        = {The Internet of Things ({IoT}): Applications, investments, and challenges for enterprises},
-  doi          = {10.1016/j.bushor.2015.03.008},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  number       = {4},
-  pages        = {431--440},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
-  volume       = {58},
-  isbn         = {1587144565},
-  publisher    = {CISCO},
-}
-
 @Article{Shafique2020,
   author       = {Kinza Shafique and Bilal A. Khawaja and Farah Sabir and Sameer Qazi and Muhammad Mustaqim},
   date         = {2020-07},
@@ -151,81 +66,6 @@
   pages        = {221--224},
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {57},
-  isbn         = {1587144565},
-  publisher    = {CISCO},
-}
-
-@Article{Xia2012,
-  author       = {Feng Xia and Laurence T. Yang and Lizhe Wang and Alexey Vinel},
-  date         = {2012-08},
-  journaltitle = {International Journal of Communication Systems},
-  title        = {Internet of Things},
-  doi          = {10.1002/dac.2417},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  number       = {9},
-  pages        = {1101--1102},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
-  volume       = {25},
-  isbn         = {1587144565},
-  publisher    = {CISCO},
-}
-
-@Article{Madakam2015,
-  author       = {Somayya Madakam and R. Ramaswamy and Siddharth Tripathi},
-  date         = {2015-08},
-  journaltitle = {Journal of Computer and Communications},
-  title        = {Internet of Things ({IoT}): A Literature Review},
-  doi          = {10.4236/jcc.2015.35021},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  number       = {5},
-  pages        = {164--173},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
-  volume       = {03},
-  isbn         = {1587144565},
-  publisher    = {CISCO},
-}
-
-@Article{Ahmed2021,
-  author       = {Majd S. Ahmed},
-  date         = {2021-04},
-  journaltitle = {Materials Today: Proceedings},
-  title        = {Designing of internet of things for real time system},
-  doi          = {10.1016/j.matpr.2021.03.527},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  number       = {5},
-  pages        = {164--173},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
-  volume       = {03},
-  isbn         = {1587144565},
-  publisher    = {CISCO},
-}
-
-@Article{Babu2021,
-  author       = {T. Babu and H. Roopa and Arvind Kumar Shukla and D. Stalin David and S. Jayadatta and A.S. Rajesh},
-  date         = {2021-11},
-  journaltitle = {Materials Today: Proceedings},
-  title        = {Internet of things-based automation design and organizational innovation of manufacturing enterprises},
-  doi          = {10.1016/j.matpr.2021.10.459},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  number       = {5},
-  pages        = {164--173},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
-  volume       = {03},
-  isbn         = {1587144565},
-  publisher    = {CISCO},
-}
-
-@Article{Zhou2017,
-  author       = {Bing Zhou},
-  date         = {2017-11},
-  journaltitle = {International Journal of Online Engineering ({iJOE})},
-  title        = {A Wireless Internet of Things Architecture Based on Mobile Internet},
-  doi          = {10.3991/ijoe.v13i10.7745},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  number       = {10},
-  pages        = {132},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
-  volume       = {13},
   isbn         = {1587144565},
   publisher    = {CISCO},
 }
@@ -261,22 +101,6 @@
   journaltitle = {Journal of Cleaner Production},
 }
 
-@Book{Goodwin2010,
-  author       = {Steven Goodwin},
-  date         = {2010-06},
-  title        = {Smart Home Automation with Linux},
-  doi          = {10.1007/978-1-4302-2779-3},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  isbn         = {1587144565},
-  number       = {10},
-  pages        = {1--10},
-  publisher    = {Apress},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
-  volume       = {301},
-  booktitle    = {Enabling Things to Talk},
-  journaltitle = {Journal of Cleaner Production},
-}
-
 @Article{Setz2021,
   author       = {Brian Setz and Sebastian Graef and Desislava Ivanova and Alexander Tiessen and Marco Aiello},
   date         = {2021-06},
@@ -309,38 +133,6 @@
   publisher    = {Apress},
 }
 
-@InProceedings{Sowah2018,
-  author       = {Robert A. Sowah and Abdul R. Ofoli and Michael K. Tetteh and Richard A. Opoku and Stephen K. Armoo},
-  booktitle    = {2018 {IEEE} 7th International Conference on Adaptive Science {\&} Technology ({ICAST})},
-  date         = {2018-08},
-  title        = {Demand Side Management of Smart Homes Using {OpenHAB} Framework for Interoperability of Devices},
-  doi          = {10.1109/icastech.2018.8506917},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  isbn         = {1587144565},
-  number       = {10},
-  pages        = {1--22},
-  publisher    = {{IEEE}},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
-  volume       = {2020},
-  journaltitle = {Journal of Sensors},
-}
-
-@InProceedings{Parocha2019,
-  author       = {Raymark C. Parocha and Erees Queen B. Macabebe},
-  booktitle    = {2019 {IEEE} International Conference on Internet of Things and Intelligence System ({IoTaIS})},
-  date         = {2019-11},
-  title        = {Implementation of Home Automation System Using {OpenHAB} Framework for Heterogeneous {IoT} Devices},
-  doi          = {10.1109/iotais47347.2019.8980370},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  isbn         = {1587144565},
-  number       = {10},
-  pages        = {1--22},
-  publisher    = {{IEEE}},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
-  volume       = {2020},
-  journaltitle = {Journal of Sensors},
-}
-
 @Book{Jain2021,
   author       = {Rishabh Jain},
   date         = {2021-11},
@@ -351,22 +143,6 @@
   number       = {10},
   pages        = {1--22},
   publisher    = {Apress},
-  url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
-  volume       = {2020},
-  booktitle    = {2019 {IEEE} International Conference on Internet of Things and Intelligence System ({IoTaIS})},
-  journaltitle = {Journal of Sensors},
-}
-
-@Book{AlWaeli2019,
-  author       = {Ali H. A. Al-Waeli and Hussein A. Kazem and Miqdam Tariq Chaichan and Kamaruzzaman Sopian},
-  date         = {2019-11},
-  title        = {Photovoltaic/Thermal ({PV}/T) Systems},
-  doi          = {10.1007/978-3-030-27824-3},
-  editor       = {Subhas Chandra Mukhopadhyay},
-  isbn         = {1587144565},
-  number       = {10},
-  pages        = {1--22},
-  publisher    = {Springer International Publishing},
   url          = {https://www.ebook.de/de/product/25454711/david_hanes_gonzalo_salgueiro_patrick_grossetete_iot_fundamentals_networking_technologies_protocols_and_use_cases_for_the_internet_of_things.html},
   volume       = {2020},
   booktitle    = {2019 {IEEE} International Conference on Internet of Things and Intelligence System ({IoTaIS})},
@@ -389,7 +165,7 @@
   publisher    = {Springer International Publishing},
 }
 
-@Article{Ashton_2009,
+@Article{Ashton2009,
   author       = {Ashton, Kevin},
   date         = {2009-06-22},
   journaltitle = {RFID journal},
@@ -397,6 +173,86 @@
   number       = {7},
   pages        = {97-114},
   volume       = {22},
+}
+
+@Misc{Shurtleff2014,
+  author = {Shurtleff, Mike},
+  date   = {2014-07-22},
+  editor = {Clean Technica},
+  title  = {The Continuing Exponential Growth Of Global Solar PV Production & Installation},
+  url    = {https://cleantechnica.com/2014/07/22/exponential-growth-global-solar-pv-production-installation/},
+}
+
+@Article{Vijayapriya2011,
+  author       = {Tamilmaran Vijayapriya and Dwarkadas Pralhadas Kothari},
+  date         = {2011},
+  journaltitle = {Smart Grid and Renewable Energy},
+  title        = {Smart Grid: An Overview},
+  doi          = {10.4236/sgre.2011.24035},
+  number       = {04},
+  pages        = {305--311},
+  volume       = {02},
+  publisher    = {Scientific Research Publishing, Inc.},
+}
+
+@Report{IPCC2022,
+  author      = {P.R. Shukla and J. Skea and R. Slade and A. Al Khourdajie and R. van Diemen and D. McCollum and M. Pathak and S. Some and P. Vyas and R. Fradera and M. Belkacemi and A. Hasija and G. Lisboa and S. Luz and J. Malley, (eds.)},
+  institution = {Cambridge University Press, Cambridge, UK and New York, NY, USA.},
+  title       = {IPCC, 2022: Climate Change 2022: Mitigation of Climate Change. Contribution of Working Group III to the Sixth Assessment Report of the Intergovernmental Panel on Climate Change},
+  doi         = {10.1017/9781009157926},
+}
+
+@Article{KouveliotisLysikatos2022,
+  author       = {Iasonas Kouveliotis-Lysikatos and Nikos Hatziargyriou and Yanli Liu and Felix Wu},
+  date         = {2022},
+  journaltitle = {Journal of Modern Power Systems and Clean Energy},
+  title        = {Towards an Internet-like Power Grid},
+  doi          = {10.35833/mpce.2020.000154},
+  number       = {1},
+  pages        = {1--11},
+  volume       = {10},
+  publisher    = {Journal of Modern Power Systems and Clean Energy},
+}
+
+@Article{Patel2022,
+  author       = {Rushil Kaushikkumar Patel and Aparna Kumari and Sudeep Tanwar and Wei-Chiang Hong and Ravi Sharma},
+  date         = {2022},
+  journaltitle = {{IEEE} Access},
+  title        = {{AI}-Empowered Recommender System for Renewable Energy Harvesting in Smart Grid System},
+  doi          = {10.1109/access.2022.3152528},
+  pages        = {24316--24326},
+  volume       = {10},
+  publisher    = {Institute of Electrical and Electronics Engineers ({IEEE})},
+}
+
+@WWW{Fusionsolar2021,
+  author = {Huawei},
+  date   = {2021-12-23},
+  title  = {FusionSolar Smart PV Management System Connection User Manual (Inverters + SDongleA)},
+  url    = {https://support.huawei.com/enterprise/en/doc/EDOC1100173984?idPath=9452479|21439560|7921563|21102414|21571652},
+}
+
+@InBook{Domb2019,
+  author    = {Domb, Menachem},
+  booktitle = {IoT and Smart Home Automation},
+  date      = {2019-11-27},
+  title     = {Smart home systems based on Internet ofThings},
+  editor    = {Yasser Ismail},
+  isbn      = {978-1-78984-096-4},
+}
+
+@InProceedings{Maksimovic2014,
+  author    = {Mirjana Maksimović and Vladimir Vujović and Nikola Davidović and Vladimir Milošević and Branko Perišić},
+  booktitle = {Proceedings of 1st International Conference on Electrical, Electronic and Computing EngineeringIcETRAN 2014},
+  date      = {2014-06-02},
+  title     = {Raspberry Pi as Internet of Things hardware:Performances and Constraints},
+}
+
+@WWW{SUN2000L2022,
+  author = {Huawei},
+  date   = {2022-03-09},
+  title  = {SUN2000-(2KTL-6KTL)-L1 Gebruikershandleiding},
+  url    = {https://support.huawei.com/enterprise/en/doc/EDOC1100149276?idPath=9452479|21439560|7921563|21102413|22027611},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
